Fix info alignment

--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,7 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 32px;
 }
 
 .info img {
@@ -92,6 +93,7 @@ a {
     font-size: 36px;
     font-weight: 900;
     color: #1F2937;
+    margin-bottom: 32px;
 }
 
 .info-text {
@@ -103,10 +105,8 @@ a {
 .info-cards {
     display: flex;
     flex-wrap: wrap;
-}
-
-.info {
-    margin: 24px;
+    gap: 24px;
+    justify-content: center;
 }
 
 .call-to-action {
